--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,23 @@
-body {
+:root{
+--primary:#5294E2;
+--secondary:#FF6D66;
+--default:#9b9b9b;
+--green:#98C379;
+--white: #fff;
+--dark:#222222;
+--gray: #9b9b9b;
+}
+*{
+ box-sizing: border-box;
+  padding: 0;
   margin: 0;
+}
+html, body, #root{
+  height:100%;
+  overflow: auto;
+}
+body {
+  background-color: var(--dark);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
